--- a/paginas/artists/Camille.html
+++ b/paginas/artists/Camille.html
@@ -68,9 +68,9 @@
         <div class="meta" data-lang-nl="Kunstenaar" data-lang-en="Artist">Kunstenaar</div>
         <h1>Camille Lemille</h1>
         <p class="lead"
-           data-lang-nl="Performance • Drukwerk • Audiovisueel"
-           data-lang-en="Performance • Print • Audiovisual">
-          Performance • Drukwerk • Audiovisueel
+           data-lang-nl="Performance • Geluid • Publishing"
+           data-lang-en="Performance • Sound • Publishing">
+          Performance • Geluid • Publishing
         </p>
       </div>
     </section>
@@ -90,33 +90,30 @@
         <article>
           <div class="meta" data-lang-nl="Biografie" data-lang-en="Biography">Biografie</div>
           <p
-            data-lang-nl="Camille Lemille werkt op het snijvlak van performance, drukwerk en audiovisueel. Ze vertrekt vaak vanuit taal en alledaagse documenten — bonnen, formulieren, berichten — om de poëzie en de politiek ervan bloot te leggen. In haar praktijk worden papieren sporen weerbarstige scripts: materiaal om te manipuleren, te herhalen en te laten resoneren in de publieke ruimte."
-            data-lang-en="Camille Lemille operates at the intersection of performance, print and audiovisual media. She often starts from language and everyday documents — receipts, forms, messages — to reveal their poetic and political layers. In her practice, paper traces become resistant scripts: material to manipulate, repeat and make resonate in public space."
-          >
-            Camille Lemille werkt op het snijvlak van performance, drukwerk en audiovisueel…
+            data-lang-en="Camille Lemille’s work focu­ses pri­ma­ri­ly on per­for­man­ce, sound and publis­hing, but also tou­ches on a broad ran­ge of media, inclu­ding screen prin­ting, video and installation. She reu­se texts and wri­ting from dif­fe­rent regis­ters. These texts can be read by a per­for­mer, screen-prin­ted onto objects, beco­me a trans­crip­ti­on for a book, or a voi­ce for a pie­ce of sound art."
+            data-lang-nl="Het werk van Camille Lemille focust in de eerste plaats op performance, geluid en publishing, maar raakt ook aan een brede waaier aan media, waaronder zeefdruk, video en installatie. Ze hergebruikt teksten uit verschillende registers: die kunnen worden voorgelezen door een performer, op objecten gezeefdrukt, een transcriptie voor een boek worden of de stem van een geluidswerk.">
+            Camille Lemille’s work focu­ses pri­ma­ri­ly on per­for­man­ce, sound and publis­hing, but also tou­ches on a broad ran­ge of media, inclu­ding screen prin­ting, video and installation. She reu­se texts and wri­ting from dif­fe­rent regis­ters. These texts can be read by a per­for­mer, screen-prin­ted onto objects, beco­me a trans­crip­ti­on for a book, or a voi­ce for a pie­ce of sound art.
           </p>
 
           <div class="meta" style="margin-top:20px" data-lang-nl="Praktisch" data-lang-en="Practical">Praktisch</div>
           <p>
-            <!-- Vervang door echte website/mail zodra beschikbaar -->
-            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">—</a><br>
-            Contact: <a class="mono-link" href="mailto:—">—</a>
+            Website: <a class="mono-link" href="http://www.camillelemille.be/" target="_blank" rel="noopener">camillelemille.be</a><br>
+            Contact: <a class="mono-link" href="mailto:camille.lemille@gmail.com">camille.lemille@gmail.com</a>
           </p>
         </article>
 
         <article>
           <div class="meta" data-lang-nl="Artist statement" data-lang-en="Artist statement">Artist statement</div>
           <p
-            data-lang-nl="Ik gebruik taal als performatief materiaal. Door officiële documenten, handleidingen en alledaagse communicatie te hercomponeren, ontstaan scores die zowel speels als kritisch zijn. Ik ben geïnteresseerd in de verschuiving van betekenis wanneer tekst een gebeurtenis wordt: wat gebeurt er als we lezen met het lichaam, en luisteren met de ogen?"
-            data-lang-en="I use language as performative material. By recomposing official documents, manuals and everyday communication, I create scores that are both playful and critical. I am interested in the shift of meaning when text becomes an event: what happens when we read with the body and listen with our eyes?"
-          >
-            Ik gebruik taal als performatief materiaal…
+            data-lang-en="I copy / past / cut / compose / glue / print / read words, signs and images, sounds, rhythms to question political aspects of our daily life : how do we sleep ? How do we have access to opportunities depending on social determinism ? How to deal with saturation and burn-out ? How do we find place to live ? How property speculation and gentrification change our cities and choices ?"
+            data-lang-nl="Ik kopieer / plak / snijd / componeer / lijm / print / lees woorden, tekens en beelden, klanken en ritmes om politieke aspecten van ons dagelijks leven te bevragen: hoe slapen we? Hoe krijgen we toegang tot kansen naargelang sociaal determinisme? Hoe omgaan met verzadiging en burn-out? Hoe vinden we woonruimte? Hoe veranderen vastgoed­speculatie en gentrificatie onze steden en keuzes?">
+            I copy / past / cut / compose / glue / print / read words, signs and images, sounds, rhythms to question political aspects of our daily life : how do we sleep ? How do we have access to opportunities depending on social determinism ? How to deal with saturation and burn-out ? How do we find place to live ? How property speculation and gentrification change our cities and choices ?
           </p>
         </article>
       </div>
     </section>
 
-    <!-- ============ GALLERY (pas aantal/bestandsnamen aan) ============ -->
+    <!-- ============ GALLERY (adjust filenames/extensions as needed) ============ -->
     <section>
       <div class="container">
         <div class="meta" data-lang-nl="Werk" data-lang-en="Work">Werk</div>
