--- a/paginas/artists/Camille.html
+++ b/paginas/artists/Camille.html
@@ -126,9 +126,20 @@
           <figure class="module"><img src="../../assets/img/artists/Camille/Camille6.jpg" alt="Werk — Camille Lemille"></figure>
           <figure class="module"><img src="../../assets/img/artists/Camille/Camille7.jpg" alt="Werk — Camille Lemille"></figure>
           <figure class="module"><img src="../../assets/img/artists/Camille/Camille8.jpg" alt="Werk — Camille Lemille"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Camille/Camille9.jpg" alt="Werk — Camille Lemille"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Camille/Camille10.jpg" alt="Werk — Camille Lemille"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Camille/Camille11.jpg" alt="Werk — Camille Lemille"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Camille/Camille12.jpg" alt="Werk — Camille Lemille"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Camille/Camille13.jpg" alt="Werk — Camille Lemille"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Camille/Camille14.jpg" alt="Werk — Camille Lemille"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Camille/Camille15.jpg" alt="Werk — Camille Lemille"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Camille/Camille16.jpg" alt="Werk — Camille Lemille"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Camille/Camille17.jpg" alt="Werk — Camille Lemille"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Camille/Camille18.jpg" alt="Werk — Camille Lemille"></figure>
         </div>
       </div>
     </section>
+
 
     <!-- ============ TERUGLINK ============ -->
     <section>
