--- a/index.html
+++ b/index.html
@@ -435,18 +435,8 @@
         </figcaption>
       </figure>
 
-      <!-- Carole -->
-      <figure class="module">
-        <img src="assets/img/artists/Carole.jpg" alt="Werk van Carole Louis">
-        <figcaption class="caption">
-          <strong>Carole Louis</strong><br>
-          <span data-lang-nl="Tragikomische installaties en performances die sociale structuren en clichés fileteren met speelse esthetiek."
-                data-lang-en="Tragicomic installations and performances that dissect social structures and clichés with playful aesthetics.">
-            Tragikomische installaties en performances die sociale structuren en clichés fileteren met speelse esthetiek.
-          </span>
-          <a class="mono-link" href="paginas/artists/Carole.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
-        </figcaption>
-      </figure>
+      <!-- kunstenaar nog aan te kondigen -->
+
 
       <!-- Jonathan -->
       <figure class="module">
