--- a/paginas/artists/Jonathan.html
+++ b/paginas/artists/Jonathan.html
@@ -91,14 +91,14 @@
             Questions, answers and questions?
           </p>
           <ul>
-            <li>◦ Is the worm safer sleeping?<br>✓ Ask me Tomorrow morning</li>
-            <li>◦ What does meaning mean?<br>✓ The enigma</li>
-            <li>◦ Is it meaning or is it the absence of it?<br>✓ Take a deep breath it Will be worth a while, it’ll hurt a mile</li>
-            <li>◦ Why is blue?<br>✓ A wise man once Said nothing</li>
-            <li>◦ What would you be without the sea?<br>✓ A monk</li>
-            <li>◦ Do you paint or do you write?<br>✓ I don’t know, ask somebody else. Maybe Marcel could answer</li>
-            <li>◦ What if the screeching of the sirens is so enchantingly beautiful?<br>✓ Who can blame them for it? Which mast can I tie myself to and where is the wax?</li>
-            <li>◦ What shall we love if not the enigma?</li>
+            <li>Is the worm safer sleeping?<br>✓ Ask me Tomorrow morning</li>
+            <li>What does meaning mean?<br>✓ The enigma</li>
+            <li>Is it meaning or is it the absence of it?<br>✓ Take a deep breath it Will be worth a while, it’ll hurt a mile</li>
+            <li>Why is blue?<br>✓ A wise man once Said nothing</li>
+            <li>What would you be without the sea?<br>✓ A monk</li>
+            <li>Do you paint or do you write?<br>✓ I don’t know, ask somebody else. Maybe Marcel could answer</li>
+            <li>What if the screeching of the sirens is so enchantingly beautiful?<br>✓ Who can blame them for it? Which mast can I tie myself to and where is the wax?</li>
+            <li>What shall we love if not the enigma?</li>
           </ul>
         </article>
       </div>
