--- a/paginas/artists/Pol.html
+++ b/paginas/artists/Pol.html
@@ -46,12 +46,12 @@
 
     <!-- Mobile drawer -->
     <div class="drawer" id="drawer" aria-hidden="true">
-      <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About" onclick="toggleDrawer()">Over</a>
-      <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues" onclick="toggleDrawer()">Data & locaties</a>
-      <a href="../../index.html#opencall" data-lang-nl="Open call" data-lang-en="Open call" onclick="toggleDrawer()">Open call</a>
-      <a href="../../index.html#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists" onclick="toggleDrawer()">Kunstenaars</a>
-      <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030" onclick="toggleDrawer()">LOV2030</a>
-      <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact" onclick="toggleDrawer()">Contact</a>
+      <a href="../../index.html#over" onclick="toggleDrawer()" data-lang-nl="Over" data-lang-en="About">Over</a>
+      <a href="../../index.html#locaties" onclick="toggleDrawer()" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
+      <a href="../../index.html#opencall" onclick="toggleDrawer()" data-lang-nl="Open call" data-lang-en="Open call">Open call</a>
+      <a href="../../index.html#kunstenaars" onclick="toggleDrawer()" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</a>
+      <a href="../../index.html#lov" onclick="toggleDrawer()" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</a>
+      <a href="../../index.html#contact" onclick="toggleDrawer()" data-lang-nl="Contact" data-lang-en="Contact">Contact</a>
 
       <!-- Mobile taal-switch -->
       <div class="lang-switch mobile-only" aria-label="Taalwissel">
@@ -92,14 +92,14 @@
         <article>
           <div class="meta" data-lang-nl="Biografie" data-lang-en="Biography">Biografie</div>
           <p
-            data-lang-nl="Pol Olivier werkt multidisciplinair met schilderkunst, sculptuur en ruimtelijke installaties. In zijn praktijk onderzoekt hij intimiteit, familiebanden en de ruimte tussen mensen. Met poëtische materialen en tactiele vormen zoekt hij naar momenten van nabijheid en frictie, en hoe persoonlijke verhalen zich vertalen in collectieve beelden."
-            data-lang-en="Pol Olivier works across painting, sculpture and spatial installations. His practice explores intimacy, family ties and the spaces between people. Using poetic materials and tactile forms, he seeks moments of closeness and friction, and how personal narratives translate into collective images.">
+            data-lang-nl="Pol Olivier is een visuele kunstenaar en maker van objecten en ruimtes. In zijn praktijk onderzoekt hij intimiteit, familiebanden en de ruimte tussen mensen. Met poëtische materialen en tactiele vormen zoekt hij naar momenten van nabijheid en frictie, en hoe persoonlijke verhalen zich vertalen in collectieve beelden."
+            data-lang-en="Pol Olivier is a visual artist a maker of objects and spaces. His practice explores intimacy, family ties and the spaces between people. Using poetic materials and tactile forms, he seeks moments of closeness and friction, and how personal narratives translate into collective images.">
             Pol Olivier werkt multidisciplinair met schilderkunst, sculptuur en ruimtelijke installaties...
           </p>
           <div class="meta" style="margin-top:20px" data-lang-nl="Praktisch" data-lang-en="Practical">Praktisch</div>
           <p>
-            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">https://pol-olivier.example</a><br>
-            Contact: <a class="mono-link" href="mailto:pol.olivier@example.com">pol.olivier@example.com</a>
+            Instagram: <a class="mono-link" href="https://www.instagram.com/activeboynverlazy" target="_blank" rel="noopener">@activeboynverlazy</a><br>
+            Contact: <a class="mono-link" href="mailto:pololivier@outlook.be">pololivier@outlook.be</a>
           </p>
         </article>
 
@@ -114,26 +114,26 @@
       </div>
     </section>
 
-    <!-- ============ GALLERY ============ -->
+    <!-- ============ GALLERY (15 beelden) ============ -->
     <section>
       <div class="container">
         <div class="meta" data-lang-nl="Werk" data-lang-en="Work">Werk</div>
         <div class="grid gallery">
-          <figure class="module">
-            <img src="../../assets/img/artists/Pol1.jpg" alt="Werk — Pol Olivier">
-          </figure>
-          <figure class="module">
-            <img src="../../assets/img/artists/Pol2.jpg" alt="Werk — Pol Olivier">
-          </figure>
-          <figure class="module">
-            <img src="../../assets/img/artists/Pol3.jpg" alt="Werk — Pol Olivier">
-          </figure>
-          <figure class="module">
-            <img src="../../assets/img/artists/Pol4.jpg" alt="Werk — Pol Olivier">
-          </figure>
-          <figure class="module">
-            <img src="../../assets/img/artists/Pol5.jpg" alt="Werk — Pol Olivier">
-          </figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol1.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol2.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol3.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol4.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol5.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol6.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol7.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol8.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol9.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol10.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol11.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol12.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol13.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol14.jpeg" alt="Werk — Pol Olivier"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Pol/Pol15.jpeg" alt="Werk — Pol Olivier"></figure>
         </div>
       </div>
     </section>
@@ -156,5 +156,8 @@
   </footer>
 
   <script src="../../assets/js/app.js" defer></script>
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
